# court-decision-prediction

./: .gitignore  1  README.md  exp.md  modeling_llama.py  pyproject.toml  requirements.txt
base_project/: configs.yaml  launch.py
base_project/common/: __init__.py  depth_logging.py  env.py  level.py  level_logging.py  logging.py  timer.py  utils.py
court_decision_prediction/: configs.yaml  launch.py  submit.py  utils.py
court_decision_prediction/common/: __init__.py  depth_logging.py  env.py  logging.py  timer.py  utils.py
court_decision_prediction/exp/: 0_eda.ipynb  1_baseline.py  2_model2-dep.ipynb  2_model2.ipynb  3_vicuna_party_ensemble.ipynb  Untitled.ipynb  djy-2-party_group_only.ipynb  djy-3-vicuna.ipynb  djy-4-party_group_only_ensemble2.ipynb  djy-summarization.ipynb  final.ipynb  jyj_llama_based.ipynb  spacy-example.ipynb  spacy-practical.ipynb  temp_h.pt  vicuna+pycaret.ipynb  vicuna-refactoring.ipynb  vicuna_base.ipynb
court_decision_prediction/script/: download_dacon_wheel.sh  download_data.sh  download_wheel.sh  submission.sh
submission/: 2_ones.csv  2_party_group_only-1.csv  2_party_group_only.csv  catboost-oversampling.csv  xgboost-oversampling-advanced_data.csv
