[tool.poetry]
name = "base-project"
version = "0.1.0"
description = ""
authors = ["Dongjin Yoon <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "base_project"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pandas = "^2.0.1"
pyyaml = "^6.0"
tqdm = "^4.65.0"
joblib = "^1.2.0"
switch = "^1.1.0"
tabulate = "^0.9.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
