[tool.poetry]
name = "court-decision-prediction"
version = "0.1.0"
description = "court-decision-prediction"
authors = ["Dongjin Yoon <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "court_decision_prediction"}]

[tool.poetry.dependencies]
python = "3.8.16"
kaleido = "0.2.1"
switch = "^1.1.0"
tabulate = "^0.9.0"
pyyaml = "^6.0"
torch = {version = "2.0.1", source = "torch"}


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
